Release 4.0.36
--------------

 * [Enterprise] Fixed some Mass Deployment bugs.
 * Passenger Standalone now gzips JSON responses.
 * Fixed some cases in which Passenger Standalone does not to properly cleanup
   its temporary files.


Release 4.0.35
--------------

 * Fixed some unit tests.


Release 4.0.34
--------------

 * The Node.js loader code now sets the `isApplicationLoader` attribute on the
   bootstrapping module. This provides a way for apps and frameworks that check
   for `module.parent` to check whether the current file is loaded by Phusion
   Passenger, or by other software that work in a similar way.

   This change has been introduced to solve a compatibility issue with CompoundJS.
   CompoundJS users should modify their server.js, and change the following:

       if (!module.parent) {

   to:

       if (!module.parent || module.parent.isApplicationLoader) {

 * Improved support for Meteor in development mode. Terminating Phusion Passenger
   now leaves less garbage Meteor processes behind.
 * It is now possible to disable the usage of the Ruby native extension by setting
   the environment variable `PASSENGER_USE_RUBY_NATIVE_SUPPORT=0`.
 * Fixed incorrect detection of the Apache MPM on Ubuntu 13.10.
 * When using RVM, if you set PassengerRuby/passenger_ruby to the raw Ruby binary
   instead of the wrapper script, Phusion Passenger will now print an error.
 * Added support for RVM >= 1.25 wrapper scripts.
 * Fixed loading passenger_native_support on Ruby 1.9.2.
 * The Union Station analytics code now works even without native_support.
 * Fixed `passenger-install-apache2-module` and `passenger-install-nginx-module` in
   Homebrew.
 * Binaries are now downloaded from an Amazon S3 mirror if the main binary server
   is unavailable.
 * And finally, although this isn't really a change in 4.0.34, it should be noted.
   In version 4.0.33 we changed the way Phusion Passenger's own Ruby source files